fix: CompletableFuture 审查报告 P0-P4 修复
P0 (H1 + 合规): ModelProviderAutoConfiguration 添加虚拟线程 executor 避免 commonPool；
EvaluationRunner 和 HybridDocumentRetrieverTest 从 newFixedThreadPool 改为虚拟线程

P1 (M1+M2): HybridSearchService 改为 thenCombine 链式编排 + orTimeout 自动取消，
消除串行 get() 等待和超时后未 cancel 问题

P2 (M4): FastTrackStrategy.extractAll 添加 orTimeout(5min) 对齐 StandardStrategy

P3 (M3): DatasetGenerator 添加 allOf().orTimeout(10min) 防止 LLM 调用无限阻塞

P4 (E1): WebMvcConfig 外部化线程池参数 + NamedThreadFactory + allowCoreThreadTimeOut